public class Connectable {
    public void turnOn(){}
    public void turnOff(){}
    public boolean isOn(){
        return false;
    }
}
