@startuml adapterDiagram
hide empty members

class TurnOnDevices {
    +main(String[] args)
    +turnOnDevice(Connectable device)
}

class Connectable <<Interface>>{
    +turnOn()
    +turnOff()
    +isOn()
}

class Lamp {
    +turnOn()
    +turnOff()
    +inOn()
}

class Computer {
    +turnOn()
    +turnOff()
    +isOn()
}

class CoffeMaker {
    +on()
    +off()
    +isOff()
}

class AdapterCoffeMaker <<Adapter>>{
    +turnOn()
    +turnOff()
    +isOn()
}

TurnOnDevices -> Connectable
Connectable <|-d- Lamp
Connectable <|-d- Computer
Connectable <|-d- AdapterCoffeMaker
AdapterCoffeMaker *-d- CoffeMaker
@enduml